--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <title>Crazy Pool</title>
   <link rel="stylesheet" href="style.css" charset="utf-8">
   <script src="createjs.min.js"></script>
-  <script type="text/javascript" src="javascript.js"></script>
 </head>
 <body>
   <canvas id="canvas" width="1000" height="600">
 
   </canvas>
+  <button id="confirm"> KONFIRMIEREN </button>
+  <script type="text/javascript" src="javascript.js"></script>
 </body>
 </html>
