--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   </canvas>
   <button id="confirm"> KONFIRMIEREN </button>
+  <button id="restart"> Neu Starten </button>
   <script type="text/javascript" src="javascript.js"></script>
 </body>
 </html>
